# portfolio

./: LICENSE  README.md
churn_prediction/: Dockerfile  Makefile  requirements.txt  setup.py
churn_prediction/scripts/: Data_Challenge_Summary.pptx
churn_prediction/src/models/: tuned_catboost_saved.pkl
churn_prediction/src/utils/: common.py  constants.py  data_processing.py  visualization.py
interview_assistant/: .dockerignore  .env_template  .gitignore  =0.15.0  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
interview_assistant/src/: interviewer_crew.py  main.py  utils.py
interview_assistant/src/config/: agents.yaml  tasks.yaml
interview_assistant/src/services/: gdrive_services.py  generate_auth_token.py
interview_assistant/src/tools/: doc_reader_tools.py
tech_interview_assistant/: .env_template  .gitignore  README.md  pyproject.toml
tech_interview_assistant/src/: main.py
tech_interview_assistant/src/agents/: answer_genenator_agent.py
tech_interview_assistant/src/config/: __init__.py
tech_interview_assistant/src/services/: __init__.py  generate_auth_token.py  gmail_service.py
tech_interview_assistant/src/utils/: constants.py  db_utils.py  retrieval_utils.py  utils.py
web_scraper_legacy/: extract_fortune_list.py  fortune_companies.py  webpage_parser.py
