[tool.poetry]
name = "interview_assistant"
version = "0.1.0"
description = "A multi-agent system to assist in virtual technical interviews."
authors = "Shisi Wang <kavender.wang@gmail.com>"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
crewai = "^0.1.0"
crewai_tools = "^0.1.0"
google-auth = "^2.0.0"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
